--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elasticemail-client",
+  "name": "@sarthakj178/elasticemail-client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
